[Add] kata 10 done