@@ -1,11 +1,7 @@
 package katas;
 
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableMap;
-import model.MovieList;
 import util.DataUtil;
 
-import java.util.Date;
 import java.util.List;
 import java.util.Map;
 
@@ -51,13 +47,20 @@ import java.util.Map;
     Output: the given datastructure
 */
 public class Kata10 {
-    public static List<Map> execute() {
+
+    private Kata10() {
+    }
+
+    public static List<Map<String, Object>> execute() {
         List<Map> lists = DataUtil.getLists();
         List<Map> videos = DataUtil.getVideos();
 
-        return ImmutableList.of(ImmutableMap.of("name", "someName", "videos", ImmutableList.of(
-                ImmutableMap.of("id", 5, "title", "The Chamber"),
-                ImmutableMap.of("id", 3, "title", "Fracture")
-        )));
+        return lists.stream().map(list -> Map.of("name", list.get("name"),
+                        "videos", videos.stream()
+                                .filter(video -> video.get("listId").equals(list.get("id")))
+                                .map(video -> Map.of("id", video.get("id"),
+                                        "title", video.get("title")))
+                                .toList()))
+                .toList();
     }
 }
